[gd_scene load_steps=6 format=3 uid="uid://dyp462q34pdvo"]

[ext_resource type="Script" uid="uid://6a6uyysheykg" path="res://scripts/base_unit/base_unit.gd" id="1_n8bhp"]
[ext_resource type="Script" uid="uid://bsetip1eay5vo" path="res://scripts/base_unit/movement_component.gd" id="2_aakss"]
[ext_resource type="Script" uid="uid://ctrvtqym607y4" path="res://scripts/base_unit/attack_component.gd" id="3_ckk82"]
[ext_resource type="Script" uid="uid://42xm15ltyvn0" path="res://scripts/base_unit/animation_component.gd" id="4_dbhn7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n8bhp"]

[node name="BaseUnit" type="Area2D" groups=["units"]]
script = ExtResource("1_n8bhp")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_n8bhp")

[node name="MenuPanel" type="Panel" parent="."]
visible = false
offset_right = 272.0
offset_bottom = 113.0

[node name="Move" type="Button" parent="MenuPanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 13.0
offset_right = 92.0
offset_bottom = 91.0
text = "Move"

[node name="Atack1" type="Button" parent="MenuPanel"]
layout_mode = 0
offset_left = 114.0
offset_top = 14.0
offset_right = 257.0
offset_bottom = 45.0
text = "Atack 1"

[node name="Atack2" type="Button" parent="MenuPanel"]
layout_mode = 0
offset_left = 115.0
offset_top = 57.0
offset_right = 257.0
offset_bottom = 88.0
text = "Atack 2"

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("2_aakss")

[node name="AttackComponent" type="Node" parent="."]
script = ExtResource("3_ckk82")

[node name="AnimationComponent" type="Node" parent="."]
script = ExtResource("4_dbhn7")
